--- a/src/main/resources/AjouterEvent.fxml
+++ b/src/main/resources/AjouterEvent.fxml
@@ -27,7 +27,7 @@
         <TextField fx:id="NombrePersonne" layoutX="182.0" layoutY="239.0" />
         <TextField fx:id="Description" layoutX="182.0" layoutY="289.0" />
         <Button layoutX="273.0" layoutY="339.0" mnemonicParsing="false" onAction="#ajouterEvent" text="Ajouter" />
-        <Text fx:id="title" layoutX="252.0" layoutY="14.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ajouter Appartement" />
+        <Text fx:id="title" layoutX="252.0" layoutY="14.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ajouter event" />
     </children>
 
 </AnchorPane>
