--- a/src/main/resources/AjouterEvent.fxml
+++ b/src/main/resources/AjouterEvent.fxml
@@ -1,33 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.text.Text?>
 <?import javafx.collections.FXCollections?>
+<?import javafx.scene.control.Button?>
+
+<?import java.lang.String?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="controllers.AjouterEvent"
             prefHeight="400.0" prefWidth="600.0">
-    <children>
-        <Text layoutX="30.0" layoutY="43.0" text="Name" />
-        <Text layoutX="30.0" layoutY="93.0" text="email" />
-        <Text layoutX="30.0" layoutY="143.0" text="title" />
-        <Text layoutX="30.0" layoutY="193.0" text="date" />
-        <Text layoutX="30.0" layoutY="243.0" text="Nombre Personne" />
-        <Text layoutX="30.0" layoutY="293.0" text="Description" />
-
-        <TextField fx:id="NameField" layoutX="182.0" layoutY="39.0" />
-        <TextField fx:id="EmailField" layoutX="182.0" layoutY="89.0" />
-        <TextField fx:id="titleFieldField" layoutX="182.0" layoutY="139.0" />
-        <TextField fx:id="dateField" layoutX="182.0" layoutY="189.0" />
-        <TextField fx:id="NombrePersonne" layoutX="182.0" layoutY="239.0" />
-        <TextField fx:id="Description" layoutX="182.0" layoutY="289.0" />
-        <Button layoutX="273.0" layoutY="339.0" mnemonicParsing="false" onAction="#ajouterEvent" text="Ajouter" />
-        <Text fx:id="title" layoutX="252.0" layoutY="14.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ajouter event" />
-    </children>
-
+    <VBox spacing="10.0" layoutX="50.0" layoutY="50.0">
+        <Text fx:id="title" text="Ajouter un événement" />
+        <VBox spacing="10.0">
+            <Label text="Nom" />
+            <TextField fx:id="nameField" />
+        </VBox>
+        <VBox spacing="10.0">
+            <Label text="Email" />
+            <TextField fx:id="emailField" />
+        </VBox>
+        <VBox spacing="10.0">
+            <Label text="Titre" />
+            <TextField fx:id="titleField" />
+        </VBox>
+        <VBox spacing="10.0">
+            <Label text="Date" />
+            <DatePicker fx:id="datePicker" />
+        </VBox>
+        <VBox spacing="10.0">
+            <Label text="Nombre de personnes" />
+            <TextField fx:id="nbrPersonneField" />
+        </VBox>
+        <VBox spacing="10.0">
+            <Label text="Description" />
+            <TextField fx:id="descriptionField" />
+        </VBox>
+        <VBox spacing="10.0">
+            <Label text="Espace" />
+            <ComboBox fx:id="espaceComboBox">
+                <items>
+                    <FXCollections fx:factory="observableArrayList">
+                        <String fx:value="Salle de réunion" />
+                        <String fx:value="Salle de sport" />
+                        <String fx:value="Salle de jeux" />
+                        <String fx:value="Salle de cinéma" />
+                        <!-- Add other space values as needed -->
+                    </FXCollections>
+                </items>
+            </ComboBox>
+        </VBox>
+        <Button layoutX="600.0" layoutY="316.0" mnemonicParsing="false" onAction="#ajouterEvent" text="Ajouter" />
+    </VBox>
 </AnchorPane>
