--- a/src/main/resources/AfficherParking.fxml
+++ b/src/main/resources/AfficherParking.fxml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherParking">
-    <children>
-        <TableView fx:id="tableParking" layoutX="50.0" layoutY="50.0" prefHeight="300.0" prefWidth="500.0">
-            <columns>
-                <TableColumn fx:id="colPlace" prefWidth="150.0" text="Place" />
-                <TableColumn fx:id="colNumPlace" prefWidth="150.0" text="Numéro de place" />
-                <TableColumn fx:id="colCapacite" prefWidth="150.0" text="Capacité" />
-                <TableColumn fx:id="colDelete" prefWidth="150.0" text="Supprimer" />
-
-            </columns>
-        </TableView>
-    </children>
-</AnchorPane>
+<VBox xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherParking">
+    <TextField fx:id="txtPlace" promptText="Place" />
+    <TextField fx:id="txtNumPlace" promptText="Numéro de place" />
+    <TextField fx:id="txtCapacite" promptText="Capacité" />
+    <Button fx:id="btnSave" text="Enregistrer les modifications" onAction="#saveChanges" />
+    <TableView fx:id="tableParking" layoutX="50.0" layoutY="50.0" prefHeight="300.0" prefWidth="500.0">
+        <columns>
+            <TableColumn fx:id="colPlace" prefWidth="150.0" text="Place" />
+            <TableColumn fx:id="colNumPlace" prefWidth="150.0" text="Numéro de place" />
+            <TableColumn fx:id="colCapacite" prefWidth="150.0" text="Capacité" />
+            <TableColumn fx:id="colDelete" prefWidth="150.0" text="Supprimer" />
+            <TableColumn fx:id="colEdit" prefWidth="150.0" text="Modifier" />
+        </columns>
+    </TableView>
+</VBox>
