--- a/src/main/resources/AfficherParking.fxml
+++ b/src/main/resources/AfficherParking.fxml
@@ -3,21 +3,23 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<VBox xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherParking">
-    <TextField fx:id="txtPlace" promptText="Place" />
-    <TextField fx:id="txtNumPlace" promptText="Numéro de place" />
-    <TextField fx:id="txtCapacite" promptText="Capacité" />
-    <Button fx:id="btnAdd" text="Ajouter un parking" onAction="#ajouterParking" />
-    <Button fx:id="btnSave" text="Enregistrer les modifications" onAction="#saveChanges" />
-    <TableView fx:id="tableParking" layoutX="50.0" layoutY="50.0" prefHeight="300.0" prefWidth="500.0">
-        <columns>
-            <TableColumn fx:id="colPlace" prefWidth="150.0" text="Place" />
-            <TableColumn fx:id="colNumPlace" prefWidth="150.0" text="Numéro de place" />
-            <TableColumn fx:id="colCapacite" prefWidth="150.0" text="Capacité" />
-            <TableColumn fx:id="colDelete" prefWidth="150.0" text="Supprimer" />
-            <TableColumn fx:id="colEdit" prefWidth="150.0" text="Modifier" />
-        </columns>
-    </TableView>
-</VBox>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherParking">
+    <children>
+        <TableView fx:id="tableParking" layoutX="26.0" layoutY="42.0" prefHeight="518.0" prefWidth="750.0">
+            <columns>
+                <TableColumn fx:id="colNom" prefWidth="75.0" text="Nom" />
+                <TableColumn fx:id="colNumPlace" prefWidth="75.0" text="Numéro de place" />
+                <TableColumn fx:id="colCapacite" prefWidth="75.0" text="Capacité" />
+                <TableColumn fx:id="colDelete" prefWidth="75.0" text="Supprimer" />
+                <TableColumn fx:id="colEdit" prefWidth="75.0" text="Modifier" />
+            </columns>
+        </TableView>
+        <TextField fx:id="txtNom" layoutX="107.0" layoutY="578.0" promptText="Nom" />
+        <TextField fx:id="txtNumPlace" layoutX="200.0" layoutY="578.0" promptText="Numéro de place" />
+        <TextField fx:id="txtCapacite" layoutX="293.0" layoutY="578.0" promptText="Capacité" />
+        <Button fx:id="btnSave" layoutX="35.0" layoutY="578.0" mnemonicParsing="false" onAction="#saveChanges" text="Enregistrer" />
+        <Button fx:id="btnAdd" layoutX="703.0" layoutY="578.0" mnemonicParsing="false" onAction="#ajouterParking" text="Ajouter" />
+    </children>
+</AnchorPane>
