--- a/src/main/resources/AfficherVoiture.fxml
+++ b/src/main/resources/AfficherVoiture.fxml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -12,7 +11,7 @@
             <columns>
                 <TableColumn fx:id="colNom" prefWidth="75.0" text="Nom" />
                 <TableColumn fx:id="colEmail" prefWidth="75.0" text="Email" />
-                <TableColumn fx:id="colNumSerie" prefWidth="75.0" text="Numéro de Série" />
+                <TableColumn fx:id="colNumSerie" prefWidth="75.0" text="NumSerie" />
                 <TableColumn fx:id="colMarque" prefWidth="75.0" text="Marque" />
                 <TableColumn fx:id="colCouleur" prefWidth="75.0" text="Couleur" />
                 <TableColumn fx:id="colNumPlace" prefWidth="75.0" text="Nombre de Places" />
@@ -22,7 +21,7 @@
         </TableView>
         <TextField fx:id="txtNom" layoutX="107.0" layoutY="578.0" promptText="Nom" />
         <TextField fx:id="txtEmail" layoutX="200.0" layoutY="578.0" promptText="Email" />
-        <TextField fx:id="txtNumSerie" layoutX="293.0" layoutY="578.0" promptText="Numéro de Série" />
+        <TextField fx:id="txtNumSerie" layoutX="293.0" layoutY="578.0" promptText="NumSerie" />
         <TextField fx:id="txtMarque" layoutX="397.0" layoutY="578.0" promptText="Marque" />
         <TextField fx:id="txtCouleur" layoutX="503.0" layoutY="578.0" promptText="Couleur" />
         <TextField fx:id="txtNumPlace" layoutX="612.0" layoutY="578.0" promptText="Nombre de Places" />
