--- a/src/main/resources/AfficherParking.fxml
+++ b/src/main/resources/AfficherParking.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -16,10 +17,16 @@
                 <TableColumn fx:id="colEdit" prefWidth="75.0" text="Modifier" />
             </columns>
         </TableView>
+
         <TextField fx:id="txtNom" layoutX="107.0" layoutY="578.0" promptText="Nom" />
         <TextField fx:id="txtNumPlace" layoutX="200.0" layoutY="578.0" promptText="Numéro de place" />
         <TextField fx:id="txtCapacite" layoutX="293.0" layoutY="578.0" promptText="Capacité" />
         <Button fx:id="btnSave" layoutX="35.0" layoutY="578.0" mnemonicParsing="false" onAction="#saveChanges" text="Enregistrer" />
         <Button fx:id="btnAdd" layoutX="703.0" layoutY="578.0" mnemonicParsing="false" onAction="#ajouterParking" text="Ajouter" />
+
+        <!-- Labels pour afficher les messages d'erreur -->
+        <Label fx:id="lblNomError" layoutX="107.0" layoutY="605.0" style="-fx-text-fill: red;" />
+        <Label fx:id="lblNumPlaceError" layoutX="200.0" layoutY="605.0" style="-fx-text-fill: red;" />
+        <Label fx:id="lblCapaciteError" layoutX="293.0" layoutY="605.0" style="-fx-text-fill: red;" />
     </children>
 </AnchorPane>
