--- a/src/main/resources/Message.fxml
+++ b/src/main/resources/Message.fxml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="621.0" xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml"
-      fx:controller="controllers.MessageController">
-    <ListView fx:id="messageList" VBox.vgrow="ALWAYS">
+<VBox xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MessageController">
+   <Button mnemonicParsing="false" onAction="#supprimerDiscussion" text="supprimer" textFill="#fc0101" />
+   <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="68.0" text="modifier" textFill="#3e08d3" />
+    <ListView fx:id="messageList" prefHeight="400.0" prefWidth="665.0" VBox.vgrow="ALWAYS">
         <!-- Les messages seront ajoutés ici -->
     </ListView>
     <HBox spacing="10">
         <Button fx:id="attachButton" text="📎" />
         <TextField fx:id="messageField" HBox.hgrow="ALWAYS" />
-        <Button fx:id="sendButton" text="Envoyer"  />
+        <Button fx:id="sendButton" text="Envoyer" />
     </HBox>
 </VBox>
