--- a/src/main/resources/ListeDiscussion.fxml
+++ b/src/main/resources/ListeDiscussion.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -20,5 +21,6 @@
             <TableColumn fx:id="dateCreation" prefWidth="149.0" text="Date de Creation" />
         </columns>
       </TableView>
+      <Button layoutX="463.0" layoutY="402.0" mnemonicParsing="false" onAction="#redirectToAjout" text="Ajouter une discussion" />
    </children>
 </AnchorPane>
