--- a/src/main/resources/AfficherEvent.fxml
+++ b/src/main/resources/AfficherEvent.fxml
@@ -1,20 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.cell.ComboBoxTableCell?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherEvent">
+<?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherEvent">
     <children>
-        <TableView fx:id="tableEvent" layoutX="50.0" layoutY="50.0" prefHeight="300.0" prefWidth="500.0">
+        <TableView fx:id="tableEvent" layoutX="26.0" layoutY="84.0" prefHeight="460.0" prefWidth="748.0">
             <columns>
-                <TableColumn fx:id="colName" prefWidth="100.0" text="Nom" />
-                <TableColumn fx:id="colEmail" prefWidth="100.0" text="Email" />
-                <TableColumn fx:id="colTitle" prefWidth="100.0" text="Titre" />
-                <TableColumn fx:id="colDate" prefWidth="100.0" text="Date" />
-                <TableColumn fx:id="colNbrPersonne" prefWidth="100.0" text="Nombre de personnes" />
-                <TableColumn fx:id="colDescription" prefWidth="100.0" text="Description" />
-                <TableColumn fx:id="colEspace" prefWidth="100.0" text="Espace" />
+
+                <TableColumn fx:id="colName" prefWidth="150.0" text="Nom" />
+                <TableColumn fx:id="colTitle" prefWidth="150.0" text="Titre" />
+                <TableColumn fx:id="colDate" prefWidth="150.0" text="Date" />
+                <TableColumn fx:id="colNbrPersonne" prefWidth="100.0" text="Nbr Personne" />
+                <TableColumn fx:id="colEspace" prefWidth="150.0" text="Espace"></TableColumn>
+                <TableColumn fx:id="colDescription" prefWidth="150.0" text="Description" />
             </columns>
         </TableView>
+
+
+
+        <ComboBox fx:id="comboBoxEspace">
+            <items>
+                <FXCollections fx:factory="observableArrayList">
+
+                    <!-- Add other space values as needed -->
+                </FXCollections>
+            </items>
+        </ComboBox>
+
+
+        <Button fx:id="btnSave" layoutX="26.0" layoutY="586.0" mnemonicParsing="false" onAction="#saveChanges" text="Enregistrer" />
+        <TextField fx:id="txtName" layoutX="200.0" layoutY="586.0" promptText="Nom" />
+        <TextField fx:id="txtTitle" layoutX="354.0" layoutY="586.0" promptText="Titre" />
+        <DatePicker fx:id="datePicker" layoutX="508.0" layoutY="586.0" promptText="Date" />
+        <TextField fx:id="txtNbrPersonne" layoutX="662.0" layoutY="586.0" promptText="Nbr Personne" />
+        <TextField fx:id="txtDescription" layoutX="830.0" layoutY="586.0" promptText="Description"  />
     </children>
 </AnchorPane>
