--- a/src/main/resources/AfficherParking.fxml
+++ b/src/main/resources/AfficherParking.fxml
@@ -1,32 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
+
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherParking">
-    <children>
-        <TableView fx:id="tableParking" layoutX="26.0" layoutY="42.0" prefHeight="518.0" prefWidth="750.0">
-            <columns>
-                <TableColumn fx:id="colNom" prefWidth="75.0" text="Nom" />
-                <TableColumn fx:id="colType" prefWidth="75.0" text="type" />
-                <TableColumn fx:id="colCapacite" prefWidth="75.0" text="Capacité" />
-                <TableColumn fx:id="colDelete" prefWidth="75.0" text="Supprimer" />
-                <TableColumn fx:id="colEdit" prefWidth="75.0" text="Modifier" />
-            </columns>
-        </TableView>
+<AnchorPane xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml"
+            fx:controller="controllers.AfficherParking"
+            prefHeight="400.0" prefWidth="600.0">
 
-        <TextField fx:id="txtNom" layoutX="107.0" layoutY="578.0" promptText="Nom" />
-        <TextField fx:id="txtType" layoutX="200.0" layoutY="578.0" promptText="type" />
-        <TextField fx:id="txtCapacite" layoutX="293.0" layoutY="578.0" promptText="Capacité" />
-        <Button fx:id="btnSave" layoutX="35.0" layoutY="578.0" mnemonicParsing="false" onAction="#saveChanges" text="Enregistrer" />
-        <Button fx:id="btnAdd" layoutX="703.0" layoutY="578.0" mnemonicParsing="false" onAction="#ajouterParking" text="Ajouter" />
-
-        <!-- Labels pour afficher les messages d'erreur -->
-        <Label fx:id="lblNomError" layoutX="107.0" layoutY="605.0" style="-fx-text-fill: red;" />
-        <Label fx:id="lblTypeError" layoutX="200.0" layoutY="605.0" style="-fx-text-fill: red;" />
-        <Label fx:id="lblCapaciteError" layoutX="293.0" layoutY="605.0" style="-fx-text-fill: red;" />
-    </children>
+    <VBox spacing="10" prefWidth="600">
+        <ListView fx:id="listViewParkings" prefHeight="300" prefWidth="200"/>
+    </VBox>
 </AnchorPane>
