--- a/src/main/resources/AjouterEvent.fxml
+++ b/src/main/resources/AjouterEvent.fxml
@@ -1,60 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.text.Text?>
-<?import javafx.collections.FXCollections?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<?import java.lang.String?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controllers.AjouterEvent"
-            prefHeight="400.0" prefWidth="600.0">
-    <VBox spacing="10.0" layoutX="50.0" layoutY="50.0">
-        <Text fx:id="title" text="Ajouter un événement" />
-        <VBox spacing="10.0">
-            <Label text="Nom" />
-            <TextField fx:id="nameField" />
-        </VBox>
-        <VBox spacing="10.0">
-            <Label text="Email" />
-            <TextField fx:id="emailField" />
-        </VBox>
-        <VBox spacing="10.0">
-            <Label text="Titre" />
-            <TextField fx:id="titleField" />
-        </VBox>
-        <VBox spacing="10.0">
-            <Label text="Date" />
-            <DatePicker fx:id="datePicker" />
-        </VBox>
-        <VBox spacing="10.0">
-            <Label text="Nombre de personnes" />
-            <TextField fx:id="nbrPersonneField" />
-        </VBox>
-        <VBox spacing="10.0">
-            <Label text="Description" />
-            <TextField fx:id="descriptionField" />
-        </VBox>
-        <VBox spacing="10.0">
-            <Label text="Espace" />
-            <ComboBox fx:id="espaceComboBox">
-                <items>
-                    <FXCollections fx:factory="observableArrayList">
-                        <String fx:value="Salle de réunion" />
-                        <String fx:value="Salle de sport" />
-                        <String fx:value="Salle de jeux" />
-                        <String fx:value="Salle de cinéma" />
-                        <!-- Add other space values as needed -->
-                    </FXCollections>
-                </items>
-            </ComboBox>
-        </VBox>
-        <Button layoutX="600.0" layoutY="316.0" mnemonicParsing="false" onAction="#ajouterEvent" text="Ajouter" />
+<AnchorPane prefHeight="471.0" prefWidth="638.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterEvent">
+
+    <!-- L'image d'arrière-plan -->
+    <ImageView fitHeight="476.0" fitWidth="638.0">
+        <image>
+            <Image url="@image/ajouts events.png" />
+        </image>
+    </ImageView>
+
+    <VBox layoutX="59.0" layoutY="49.0" prefHeight="82.0" prefWidth="67.0" spacing="10.0">
+
+        <!-- Contenu de votre interface utilisateur -->
+
+        <VBox spacing="10.0" />
+        <VBox spacing="10.0" />
+        <VBox spacing="10.0" />
+        <VBox spacing="10.0" />
+        <VBox spacing="10.0" />
+         <Label prefHeight="18.0" prefWidth="42.0" text="Titre" textFill="WHITE">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
+        <VBox spacing="10.0" />
     </VBox>
+      <TextField fx:id="titleField" layoutX="206.0" layoutY="90.0" prefHeight="26.0" prefWidth="103.0" />
+      <DatePicker fx:id="datePicker" layoutX="206.0" layoutY="140.0" prefHeight="26.0" prefWidth="103.0" />
+      <TextField fx:id="heureField" layoutX="206.0" layoutY="188.0" prefHeight="26.0" prefWidth="103.0" />
+      <TextField fx:id="nbrPersonneField" layoutX="206.0" layoutY="235.0" prefHeight="26.0" prefWidth="103.0" />
+      <TextField fx:id="descriptionField" layoutX="206.0" layoutY="279.0" prefHeight="26.0" prefWidth="103.0" />
+      <ComboBox fx:id="espaceComboBox" layoutX="206.0" layoutY="325.0" prefHeight="26.0" prefWidth="103.0">
+                <!-- Les noms d'espaces seront ajoutés dynamiquement -->
+            </ComboBox>
+     <Button layoutX="217.0" layoutY="392.0" mnemonicParsing="false" onAction="#ajouterEvent" prefHeight="26.0" prefWidth="67.0" text="Ajouter" />
+      <Label layoutX="58.0" layoutY="329.0" text="Espace" textFill="#fffafa">
+      <font>
+         <Font size="13.0" />
+      </font>
+   </Label>
+      <Label layoutX="57.0" layoutY="283.0" text="Description" textFill="WHITE">
+      <font>
+         <Font size="13.0" />
+      </font>
+   </Label>
+      <Label layoutX="60.0" layoutY="239.0" text="Nombre de personnes" textFill="#f2e5e5">
+      <font>
+         <Font size="13.0" />
+      </font>
+   </Label>
+      <Label layoutX="60.0" layoutY="194.0" text="Heure" textFill="WHITE">
+      <font>
+         <Font size="13.0" />
+      </font>
+   </Label>
+      <Label layoutX="62.0" layoutY="147.0" text="Date" textFill="#fffbfb">
+      <font>
+         <Font size="13.0" />
+      </font>
+   </Label>
 </AnchorPane>
