--- a/src/main/resources/AfficherParking.fxml
+++ b/src/main/resources/AfficherParking.fxml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controllers.AfficherParking"
-            prefHeight="400.0" prefWidth="600.0">
-
-    <VBox spacing="10" prefWidth="600">
-        <ListView fx:id="listViewParkings" prefHeight="300" prefWidth="200"/>
-    </VBox>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherParking">
+    <children>
+        <ListView fx:id="listeParkings" layoutX="46.0" layoutY="44.0" prefHeight="312.0" prefWidth="500.0" />
+        <HBox layoutX="46.0" layoutY="366.0" spacing="20.0">
+            <children>
+                <Button fx:id="boutonAjouter" mnemonicParsing="false" text="Ajouter" />
+                <Button fx:id="boutonModifier" mnemonicParsing="false" text="Modifier" />
+                <Button fx:id="boutonSupprimer" mnemonicParsing="false" text="Supprimer" />
+            </children>
+        </HBox>
+    </children>
 </AnchorPane>
