--- a/src/main/resources/AfficherParking.fxml
+++ b/src/main/resources/AfficherParking.fxml
@@ -2,18 +2,22 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherParking">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherParking">
     <children>
-        <ListView fx:id="listeParkings" layoutX="46.0" layoutY="44.0" prefHeight="312.0" prefWidth="500.0" />
-        <HBox layoutX="46.0" layoutY="366.0" spacing="20.0">
-            <children>
-                <Button fx:id="boutonAjouter" mnemonicParsing="false" text="Ajouter" />
-                <Button fx:id="boutonModifier" mnemonicParsing="false" text="Modifier" />
-                <Button fx:id="boutonSupprimer" mnemonicParsing="false" text="Supprimer" />
-            </children>
-        </HBox>
+        <ImageView fitHeight="600.0" fitWidth="800.0">
+            <image>
+                <Image url="@image/listeParking.png" />
+            </image>
+        </ImageView>
+        <ListView fx:id="listeParkings" layoutX="60.0" layoutY="118.0" prefHeight="312.0" prefWidth="651.0" />
+        <HBox layoutX="46.0" layoutY="366.0" spacing="20.0" />
+          <Button fx:id="boutonAjouter" layoutX="81.0" layoutY="453.0" mnemonicParsing="false" text="Ajouter" />
+          <Button fx:id="boutonModifier" layoutX="166.0" layoutY="452.0" mnemonicParsing="false" text="Modifier" />
+          <Button fx:id="boutonSupprimer" layoutX="262.0" layoutY="450.0" mnemonicParsing="false" text="Supprimer" />
     </children>
 </AnchorPane>
