--- a/src/main/resources/AjouterParking.fxml
+++ b/src/main/resources/AjouterParking.fxml
@@ -1,46 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.HBox?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterParkingController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterParking">
     <children>
-          <ImageView fitHeight="600.0" fitWidth="800.0">
-              <image>
-                  <Image url="@image/ajouterParking.png" />
-              </image>
-          </ImageView>
-        <VBox layoutX="30.0" layoutY="20.0" spacing="10" />
-          <Button fx:id="boutonAjouter" layoutX="165.0" layoutY="366.0" mnemonicParsing="false" onAction="#ajouterParking" prefHeight="25.0" prefWidth="105.0" text="Ajouter" />
-          <TextField fx:id="nombreActuellesTextField" layoutX="206.0" layoutY="308.0" promptText="Nombre actuel" />
-          <TextField fx:id="typeTextField" layoutX="206.0" layoutY="256.0" promptText="Type" />
-          <TextField fx:id="capaciteTextField" layoutX="206.0" layoutY="204.0" promptText="Capacité" />
-          <TextField fx:id="nomTextField" layoutX="206.0" layoutY="160.0" promptText="Nom" />
-      <Label layoutX="65.0" layoutY="162.0" text="Nom" textFill="WHITE">
-         <font>
-            <Font name="System Bold Italic" size="15.0" />
-         </font>
-      </Label>
-      <Label layoutX="62.0" layoutY="206.0" text="Capacité" textFill="WHITE">
-         <font>
-            <Font name="System Bold Italic" size="15.0" />
-         </font>
-      </Label>
-      <Label layoutX="65.0" layoutY="258.0" text="Type" textFill="WHITE">
-         <font>
-            <Font name="System Bold Italic" size="15.0" />
-         </font>
-      </Label>
-      <Label layoutX="65.0" layoutY="310.0" text="Nombre actuel" textFill="WHITE">
-         <font>
-            <Font name="System Bold Italic" size="15.0" />
-         </font>
-      </Label>
+        <Label layoutX="47.0" layoutY="50.0" text="Nom du parking :" />
+        <TextField fx:id="nomTextField" layoutX="156.0" layoutY="46.0" prefWidth="200.0" />
+
+        <Label layoutX="47.0" layoutY="100.0" text="Capacité :" />
+        <TextField fx:id="capaciteTextField" layoutX="156.0" layoutY="96.0" prefWidth="200.0" />
+
+        <Label layoutX="47.0" layoutY="150.0" text="Type :" />
+        <ComboBox fx:id="typeComboBox" layoutX="154.0" layoutY="146.0" prefWidth="200" />
+
+        <Label layoutX="47.0" layoutY="200.0" text="Nombre actuel de voitures :" />
+        <TextField fx:id="nombreActuellesTextField" layoutX="234.0" layoutY="196.0" prefWidth="120.0" />
+
+        <HBox layoutX="47.0" layoutY="300.0" spacing="20.0">
+            <children>
+                <Button fx:id="boutonAjouter" mnemonicParsing="false" onAction="#ajouterParking" text="Ajouter" />
+            </children>
+        </HBox>
     </children>
 </AnchorPane>
