--- a/src/main/resources/DetailsParking.fxml
+++ b/src/main/resources/DetailsParking.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
+<?import javafx.scene.control.Button?>
 <AnchorPane prefHeight="200.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.DetailsParking">
     <children>
         <Label layoutX="41.0" layoutY="47.0" text="Nom:" />
@@ -13,5 +14,7 @@
         <Label fx:id="labelCapacite" layoutX="137.0" layoutY="78.0" />
         <Label fx:id="labelType" layoutX="137.0" layoutY="109.0" />
         <Label fx:id="labelNombreActuelles" layoutX="137.0" layoutY="140.0" />
+        <Button fx:id="boutonSupprimer" text="Supprimer" onAction="#supprimerParking"/>
+
     </children>
 </AnchorPane>
