--- a/src/main/resources/AfficherVoiture.fxml
+++ b/src/main/resources/AfficherVoiture.fxml
@@ -1,47 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.control.Button?>
+
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherVoiture">
+<?import javafx.scene.control.Button?>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherVoiture">
     <children>
-        <TableView fx:id="tableVoiture" layoutX="26.0" layoutY="42.0" prefHeight="518.0" prefWidth="750.0">
-            <columns>
-                <TableColumn fx:id="colNom" prefWidth="75.0" text="Nom" />
-                <TableColumn fx:id="colEmail" prefWidth="75.0" text="Email" />
-                <TableColumn fx:id="colNumSerie" prefWidth="75.0" text="Numéro de série" />
-                <TableColumn fx:id="colMarque" prefWidth="75.0" text="Marque" />
-                <TableColumn fx:id="colCouleur" prefWidth="75.0" text="Couleur" />
-                <TableColumn fx:id="colNumPlace" prefWidth="75.0" text="Numéro de place" />
-                <TableColumn fx:id="colDelete" prefWidth="75.0" text="Supprimer" />
-                <TableColumn fx:id="colEdit" prefWidth="75.0" text="Modifier" />
-            </columns>
-        </TableView>
+        <Label layoutX="47.0" layoutY="50.0" text="Sélectionner le type de parking :" />
+        <ComboBox fx:id="comboBoxType" layoutX="240.0" layoutY="46.0" prefWidth="200.0" />
 
-        <TextField fx:id="txtNom" layoutX="107.0" layoutY="578.0" promptText="Nom" />
+        <Label layoutX="47.0" layoutY="100.0" text="Liste des parkings :" />
+        <ListView fx:id="listViewParkings" layoutX="47.0" layoutY="150.0" prefHeight="200.0" prefWidth="500.0" />
+        <Button text="Ajouter" onAction="#handleAjouterButton"/>
 
-        <TextField fx:id="txtEmail" layoutX="200.0" layoutY="578.0" promptText="Email" />
-
-        <TextField fx:id="txtNumSerie" layoutX="293.0" layoutY="578.0" promptText="Numéro de série" />
-
-        <TextField fx:id="txtMarque" layoutX="386.0" layoutY="578.0" promptText="Marque" />
-
-        <TextField fx:id="txtCouleur" layoutX="479.0" layoutY="578.0" promptText="Couleur" />
-
-        <TextField fx:id="txtNumPlace" layoutX="572.0" layoutY="578.0" promptText="Numéro de place" />
-
-        <Button fx:id="btnSave" layoutX="35.0" layoutY="578.0" mnemonicParsing="false" onAction="#saveChanges" text="Enregistrer" />
-        <Button fx:id="btnAdd" layoutX="703.0" layoutY="578.0" mnemonicParsing="false" onAction="#ajouterVoiture" text="Ajouter" />
-
-        <!-- Labels pour afficher les messages d'erreur -->
-        <Label fx:id="lblNomError" layoutX="107.0" layoutY="605.0" style="-fx-text-fill: red;" />
-        <Label fx:id="lblEmailError" layoutX="107.0" layoutY="605.0" style="-fx-text-fill: red;" />
-        <Label fx:id="lblNumSerieError" layoutX="107.0" layoutY="605.0" style="-fx-text-fill: red;" />
-        <Label fx:id="lblMarqueError" layoutX="107.0" layoutY="605.0" style="-fx-text-fill: red;" />
-        <Label fx:id="lblCouleurError" layoutX="107.0" layoutY="605.0" style="-fx-text-fill: red;" />
-        <Label fx:id="lblNumPlaceError" layoutX="107.0" layoutY="605.0" style="-fx-text-fill: red;" />
     </children>
 </AnchorPane>
