--- a/src/main/resources/AjouterVoiture.fxml
+++ b/src/main/resources/AjouterVoiture.fxml
@@ -1,37 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<VBox xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml"
-      fx:controller="controllers.AjouterVoiture"
-      prefWidth="300" prefHeight="200" alignment="CENTER">
+<?import javafx.scene.control.Button?>
+<AnchorPane prefHeight="200.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="controllers.AjouterVoiture">
+    <children>
+        <TextField fx:id="marqueField" layoutX="148.0" layoutY="61.0" promptText="Marque"/>
+        <TextField fx:id="modeleField" layoutX="148.0" layoutY="105.0" promptText="Modèle"/>
+        <TextField fx:id="couleurField" layoutX="148.0" layoutY="148.0" promptText="Couleur"/>
+        <TextField fx:id="matriculeField" layoutX="148.0" layoutY="193.0" promptText="Matricule"/>
+        <Button text="Ajouter" onAction="#handleAjouterButton" layoutX="200.0" layoutY="250.0" />
 
-    <Label text="Ajouter une voiture" style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
-
-    <HBox spacing="10">
-        <Label text="Marque"/>
-        <TextField fx:id="marqueField"/>
-    </HBox>
-
-    <HBox spacing="10">
-        <Label text="Modèle"/>
-        <TextField fx:id="modeleField"/>
-    </HBox>
-
-    <HBox spacing="10">
-        <Label text="Couleur"/>
-        <TextField fx:id="couleurField"/>
-    </HBox>
-
-    <HBox spacing="10">
-        <Label text="Matricule"/>
-        <TextField fx:id="matriculeField"/>
-    </HBox>
-
-    <Button text="Ajouter" onAction="#handleAjouterButton"/>
-</VBox>
+    </children>
+</AnchorPane>
