--- a/src/main/resources/AfficherEvent.fxml
+++ b/src/main/resources/AfficherEvent.fxml
@@ -1,57 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 
-
-
-<?import javafx.collections.FXCollections?>
-<?import javafx.scene.control.TextField?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherEvent">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherEvent">
     <children>
-        <VBox layoutX="63.0" layoutY="95.0" prefHeight="457.0" prefWidth="673.0" spacing="10.0">
-
-            <ListView fx:id="Event" prefHeight="260.0" prefWidth="674.0" />
-
-            <ComboBox fx:id="comboBoxEspace" promptText="Espace">
-                <items>
-                    <FXCollections fx:factory="observableArrayList">
-                        <!-- Ajoutez les éléments de l'espace ici -->
-                    </FXCollections>
-                </items>
-            </ComboBox>
-
-            <TextField fx:id="txtName" promptText="Nom" />
-            <TextField fx:id="txtTitle" promptText="Titre" />
-            <DatePicker fx:id="datePicker" promptText="Date" />
-            <Spinner fx:id="spinnerHour">
-                <valueFactory>
-                    <SpinnerValueFactory.IntegerSpinnerValueFactory min="0" max="23" initialValue="0" />
-                </valueFactory>
-            </Spinner>
-
-            <Spinner fx:id="spinnerMinute">
-                <valueFactory>
-                    <SpinnerValueFactory.IntegerSpinnerValueFactory min="0" max="59" initialValue="0" />
-                </valueFactory>
-            </Spinner>
-
-
-            <TextField fx:id="txtNbrPersonne" promptText="Nbr Personne" />
-            <TextField fx:id="txtDescription" promptText="Description"  />
-
-            <HBox prefHeight="58.0" prefWidth="673.0" spacing="10.0">
-                <Button fx:id="btnSave" mnemonicParsing="false" onAction="#saveChanges" prefHeight="26.0" prefWidth="104.0" text="Enregistrer" />
-                <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#ajouterEvent" prefHeight="26.0" prefWidth="104.0" text="Ajouter" />
-            </HBox>
-        </VBox>
+        <ImageView fitHeight="600.0" fitWidth="800.0">
+            <image>
+                <Image url="@image/modification des events.png" /> <!-- Assurez-vous d'avoir l'image correcte et le chemin correct -->
+            </image>
+        </ImageView>
+        <ListView fx:id="listeEvents" layoutX="60.0" layoutY="118.0" prefHeight="312.0" prefWidth="651.0" />
+        <HBox layoutX="46.0" layoutY="366.0" spacing="20.0" /> <!-- Vous pouvez ajouter d'autres éléments ici si nécessaire -->
+        <Button fx:id="boutonGerer" layoutX="81.0" layoutY="453.0" mnemonicParsing="false" text="Gerer" />
+        <!-- Ajoutez d'autres boutons ou éléments au besoin -->
     </children>
 </AnchorPane>
